--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -44,4 +44,4 @@ jobs:
             npm install
             npm run build || true
             npm run kill || true
-            npm start || npm run prod
+            npm start
